Phase3_AST/y.output
Grammar

    0 $accept: start $end

    1 start: ls_exp

    2 ls_exp: %empty
    3       | assn_or_exp
    4       | ls_exp T_SEMICOLON
    5       | ls_exp T_SEMICOLON assn_or_exp
    6       | ls_exp T_NEWLINE
    7       | ls_exp T_NEWLINE assn_or_exp

    8 assn_or_exp: exp
    9            | stmt
   10            | eq_assn
   11            | print_stmt

   12 stmt: T_IF ifcond assn_or_exp
   13     | T_IF ifcond assn_or_exp T_ELSE assn_or_exp
   14     | T_WHILE cond assn_or_exp
   15     | T_FOR forcond assn_or_exp

   16 eq_assn: SYM T_EQASSIGN assn_or_exp

   17 cond: T_LEFTPAREN exp T_RIGHTPAREN
   18     | T_LEFTPAREN exp T_RIGHTPAREN T_NEWLINE

   19 forcond: T_LEFTPAREN SYM T_IN exp T_RIGHTPAREN
   20        | T_LEFTPAREN SYM T_IN exp T_RIGHTPAREN T_NEWLINE

   21 ifcond: T_LEFTPAREN exp T_RIGHTPAREN
   22       | T_LEFTPAREN exp T_RIGHTPAREN T_NEWLINE

   23 print_stmt: T_PRINT exp T_RIGHTPAREN

   24 exp: SYM
   25    | CONST_STRING
   26    | CONST_NUMBER
   27    | T_LEFTPAREN assn_or_exp T_RIGHTPAREN
   28    | T_LEFTCURL ls_exp T_RIGHTCURL
   29    | exp T_LT exp
   30    | exp T_GT exp
   31    | exp T_LE exp
   32    | exp T_GE exp
   33    | exp T_NE exp
   34    | exp T_EQ exp
   35    | exp T_ANDD exp
   36    | exp T_ORD exp
   37    | exp T_PLUS exp
   38    | exp T_MINUS exp
   39    | exp T_COLON exp
   40    | exp T_FSLASH exp
   41    | exp T_STAR exp
   42    | SYM T_LEFTASSIGN exp


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NE (258) 33
T_GE (259) 32
T_GT (260) 30
T_LT (261) 29
T_LE (262) 31
T_EQ (263) 34
T_ANDD (264) 35
T_ORD (265) 36
T_LEFTASSIGN (266) 42
T_EQASSIGN (267) 16
T_IF (268) 12 13
T_ELSE (269) 13
T_FOR (270) 15
T_WHILE (271) 14
T_IN (272) 19 20
CONST_NUMBER (273) 26
CONST_STRING (274) 25
SYM (275) 16 19 20 24 42
T_NEWLINE (276) 6 7 18 20 22
T_SEMICOLON (277) 4 5
T_COLON (278) 39
T_PRINT (279) 23
T_PLUS (280) 37
T_MINUS (281) 38
T_STAR (282) 41
T_FSLASH (283) 40
T_LEFTPAREN (284) 17 18 19 20 21 22 27
T_RIGHTPAREN (285) 17 18 19 20 21 22 23 27
T_LEFTCURL (286) 28
T_RIGHTCURL (287) 28


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
start (34)
    on left: 1, on right: 0
ls_exp (35)
    on left: 2 3 4 5 6 7, on right: 1 4 5 6 7 28
assn_or_exp (36)
    on left: 8 9 10 11, on right: 3 5 7 12 13 14 15 16 27
stmt (37)
    on left: 12 13 14 15, on right: 9
eq_assn (38)
    on left: 16, on right: 10
cond (39)
    on left: 17 18, on right: 14
forcond (40)
    on left: 19 20, on right: 15
ifcond (41)
    on left: 21 22, on right: 12 13
print_stmt (42)
    on left: 23, on right: 11
exp (43)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42, on right: 8 17 18 19 20 21 22 23 29 30 31 32 33 34 35 36 37
    38 39 40 41 42


State 0

    0 $accept: . start $end

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    $default  reduce using rule 2 (ls_exp)

    start        go to state 10
    ls_exp       go to state 11
    assn_or_exp  go to state 12
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 1

   12 stmt: T_IF . ifcond assn_or_exp
   13     | T_IF . ifcond assn_or_exp T_ELSE assn_or_exp

    T_LEFTPAREN  shift, and go to state 17

    ifcond  go to state 18


State 2

   15 stmt: T_FOR . forcond assn_or_exp

    T_LEFTPAREN  shift, and go to state 19

    forcond  go to state 20


State 3

   14 stmt: T_WHILE . cond assn_or_exp

    T_LEFTPAREN  shift, and go to state 21

    cond  go to state 22


State 4

   26 exp: CONST_NUMBER .

    $default  reduce using rule 26 (exp)


State 5

   25 exp: CONST_STRING .

    $default  reduce using rule 25 (exp)


State 6

   16 eq_assn: SYM . T_EQASSIGN assn_or_exp
   24 exp: SYM .
   42    | SYM . T_LEFTASSIGN exp

    T_LEFTASSIGN  shift, and go to state 23
    T_EQASSIGN    shift, and go to state 24

    $default  reduce using rule 24 (exp)


State 7

   23 print_stmt: T_PRINT . exp T_RIGHTPAREN

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 26


State 8

   27 exp: T_LEFTPAREN . assn_or_exp T_RIGHTPAREN

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 27
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 9

   28 exp: T_LEFTCURL . ls_exp T_RIGHTCURL

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    $default  reduce using rule 2 (ls_exp)

    ls_exp       go to state 28
    assn_or_exp  go to state 12
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 10

    0 $accept: start . $end

    $end  shift, and go to state 29


State 11

    1 start: ls_exp .
    4 ls_exp: ls_exp . T_SEMICOLON
    5       | ls_exp . T_SEMICOLON assn_or_exp
    6       | ls_exp . T_NEWLINE
    7       | ls_exp . T_NEWLINE assn_or_exp

    T_NEWLINE    shift, and go to state 30
    T_SEMICOLON  shift, and go to state 31

    $default  reduce using rule 1 (start)


State 12

    3 ls_exp: assn_or_exp .

    $default  reduce using rule 3 (ls_exp)


State 13

    9 assn_or_exp: stmt .

    $default  reduce using rule 9 (assn_or_exp)


State 14

   10 assn_or_exp: eq_assn .

    $default  reduce using rule 10 (assn_or_exp)


State 15

   11 assn_or_exp: print_stmt .

    $default  reduce using rule 11 (assn_or_exp)


State 16

    8 assn_or_exp: exp .
   29 exp: exp . T_LT exp
   30    | exp . T_GT exp
   31    | exp . T_LE exp
   32    | exp . T_GE exp
   33    | exp . T_NE exp
   34    | exp . T_EQ exp
   35    | exp . T_ANDD exp
   36    | exp . T_ORD exp
   37    | exp . T_PLUS exp
   38    | exp . T_MINUS exp
   39    | exp . T_COLON exp
   40    | exp . T_FSLASH exp
   41    | exp . T_STAR exp

    T_NE      shift, and go to state 32
    T_GE      shift, and go to state 33
    T_GT      shift, and go to state 34
    T_LT      shift, and go to state 35
    T_LE      shift, and go to state 36
    T_EQ      shift, and go to state 37
    T_ANDD    shift, and go to state 38
    T_ORD     shift, and go to state 39
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    $default  reduce using rule 8 (assn_or_exp)


State 17

   21 ifcond: T_LEFTPAREN . exp T_RIGHTPAREN
   22       | T_LEFTPAREN . exp T_RIGHTPAREN T_NEWLINE

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 45


State 18

   12 stmt: T_IF ifcond . assn_or_exp
   13     | T_IF ifcond . assn_or_exp T_ELSE assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 46
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 19

   19 forcond: T_LEFTPAREN . SYM T_IN exp T_RIGHTPAREN
   20        | T_LEFTPAREN . SYM T_IN exp T_RIGHTPAREN T_NEWLINE

    SYM  shift, and go to state 47


State 20

   15 stmt: T_FOR forcond . assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 48
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 21

   17 cond: T_LEFTPAREN . exp T_RIGHTPAREN
   18     | T_LEFTPAREN . exp T_RIGHTPAREN T_NEWLINE

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 49


State 22

   14 stmt: T_WHILE cond . assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 50
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 23

   42 exp: SYM T_LEFTASSIGN . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 51


State 24

   16 eq_assn: SYM T_EQASSIGN . assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 52
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 25

   24 exp: SYM .
   42    | SYM . T_LEFTASSIGN exp

    T_LEFTASSIGN  shift, and go to state 23

    $default  reduce using rule 24 (exp)


State 26

   23 print_stmt: T_PRINT exp . T_RIGHTPAREN
   29 exp: exp . T_LT exp
   30    | exp . T_GT exp
   31    | exp . T_LE exp
   32    | exp . T_GE exp
   33    | exp . T_NE exp
   34    | exp . T_EQ exp
   35    | exp . T_ANDD exp
   36    | exp . T_ORD exp
   37    | exp . T_PLUS exp
   38    | exp . T_MINUS exp
   39    | exp . T_COLON exp
   40    | exp . T_FSLASH exp
   41    | exp . T_STAR exp

    T_NE          shift, and go to state 32
    T_GE          shift, and go to state 33
    T_GT          shift, and go to state 34
    T_LT          shift, and go to state 35
    T_LE          shift, and go to state 36
    T_EQ          shift, and go to state 37
    T_ANDD        shift, and go to state 38
    T_ORD         shift, and go to state 39
    T_COLON       shift, and go to state 40
    T_PLUS        shift, and go to state 41
    T_MINUS       shift, and go to state 42
    T_STAR        shift, and go to state 43
    T_FSLASH      shift, and go to state 44
    T_RIGHTPAREN  shift, and go to state 53


State 27

   27 exp: T_LEFTPAREN assn_or_exp . T_RIGHTPAREN

    T_RIGHTPAREN  shift, and go to state 54


State 28

    4 ls_exp: ls_exp . T_SEMICOLON
    5       | ls_exp . T_SEMICOLON assn_or_exp
    6       | ls_exp . T_NEWLINE
    7       | ls_exp . T_NEWLINE assn_or_exp
   28 exp: T_LEFTCURL ls_exp . T_RIGHTCURL

    T_NEWLINE    shift, and go to state 30
    T_SEMICOLON  shift, and go to state 31
    T_RIGHTCURL  shift, and go to state 55


State 29

    0 $accept: start $end .

    $default  accept


State 30

    6 ls_exp: ls_exp T_NEWLINE .
    7       | ls_exp T_NEWLINE . assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    $default  reduce using rule 6 (ls_exp)

    assn_or_exp  go to state 56
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 31

    4 ls_exp: ls_exp T_SEMICOLON .
    5       | ls_exp T_SEMICOLON . assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    $default  reduce using rule 4 (ls_exp)

    assn_or_exp  go to state 57
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 32

   33 exp: exp T_NE . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 58


State 33

   32 exp: exp T_GE . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 59


State 34

   30 exp: exp T_GT . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 60


State 35

   29 exp: exp T_LT . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 61


State 36

   31 exp: exp T_LE . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 62


State 37

   34 exp: exp T_EQ . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 63


State 38

   35 exp: exp T_ANDD . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 64


State 39

   36 exp: exp T_ORD . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 65


State 40

   39 exp: exp T_COLON . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 66


State 41

   37 exp: exp T_PLUS . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 67


State 42

   38 exp: exp T_MINUS . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 68


State 43

   41 exp: exp T_STAR . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 69


State 44

   40 exp: exp T_FSLASH . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 70


State 45

   21 ifcond: T_LEFTPAREN exp . T_RIGHTPAREN
   22       | T_LEFTPAREN exp . T_RIGHTPAREN T_NEWLINE
   29 exp: exp . T_LT exp
   30    | exp . T_GT exp
   31    | exp . T_LE exp
   32    | exp . T_GE exp
   33    | exp . T_NE exp
   34    | exp . T_EQ exp
   35    | exp . T_ANDD exp
   36    | exp . T_ORD exp
   37    | exp . T_PLUS exp
   38    | exp . T_MINUS exp
   39    | exp . T_COLON exp
   40    | exp . T_FSLASH exp
   41    | exp . T_STAR exp

    T_NE          shift, and go to state 32
    T_GE          shift, and go to state 33
    T_GT          shift, and go to state 34
    T_LT          shift, and go to state 35
    T_LE          shift, and go to state 36
    T_EQ          shift, and go to state 37
    T_ANDD        shift, and go to state 38
    T_ORD         shift, and go to state 39
    T_COLON       shift, and go to state 40
    T_PLUS        shift, and go to state 41
    T_MINUS       shift, and go to state 42
    T_STAR        shift, and go to state 43
    T_FSLASH      shift, and go to state 44
    T_RIGHTPAREN  shift, and go to state 71


State 46

   12 stmt: T_IF ifcond assn_or_exp .
   13     | T_IF ifcond assn_or_exp . T_ELSE assn_or_exp

    T_ELSE  shift, and go to state 72

    $default  reduce using rule 12 (stmt)


State 47

   19 forcond: T_LEFTPAREN SYM . T_IN exp T_RIGHTPAREN
   20        | T_LEFTPAREN SYM . T_IN exp T_RIGHTPAREN T_NEWLINE

    T_IN  shift, and go to state 73


State 48

   15 stmt: T_FOR forcond assn_or_exp .

    $default  reduce using rule 15 (stmt)


State 49

   17 cond: T_LEFTPAREN exp . T_RIGHTPAREN
   18     | T_LEFTPAREN exp . T_RIGHTPAREN T_NEWLINE
   29 exp: exp . T_LT exp
   30    | exp . T_GT exp
   31    | exp . T_LE exp
   32    | exp . T_GE exp
   33    | exp . T_NE exp
   34    | exp . T_EQ exp
   35    | exp . T_ANDD exp
   36    | exp . T_ORD exp
   37    | exp . T_PLUS exp
   38    | exp . T_MINUS exp
   39    | exp . T_COLON exp
   40    | exp . T_FSLASH exp
   41    | exp . T_STAR exp

    T_NE          shift, and go to state 32
    T_GE          shift, and go to state 33
    T_GT          shift, and go to state 34
    T_LT          shift, and go to state 35
    T_LE          shift, and go to state 36
    T_EQ          shift, and go to state 37
    T_ANDD        shift, and go to state 38
    T_ORD         shift, and go to state 39
    T_COLON       shift, and go to state 40
    T_PLUS        shift, and go to state 41
    T_MINUS       shift, and go to state 42
    T_STAR        shift, and go to state 43
    T_FSLASH      shift, and go to state 44
    T_RIGHTPAREN  shift, and go to state 74


State 50

   14 stmt: T_WHILE cond assn_or_exp .

    $default  reduce using rule 14 (stmt)


State 51

   29 exp: exp . T_LT exp
   30    | exp . T_GT exp
   31    | exp . T_LE exp
   32    | exp . T_GE exp
   33    | exp . T_NE exp
   34    | exp . T_EQ exp
   35    | exp . T_ANDD exp
   36    | exp . T_ORD exp
   37    | exp . T_PLUS exp
   38    | exp . T_MINUS exp
   39    | exp . T_COLON exp
   40    | exp . T_FSLASH exp
   41    | exp . T_STAR exp
   42    | SYM T_LEFTASSIGN exp .

    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    $default  reduce using rule 42 (exp)


State 52

   16 eq_assn: SYM T_EQASSIGN assn_or_exp .

    $default  reduce using rule 16 (eq_assn)


State 53

   23 print_stmt: T_PRINT exp T_RIGHTPAREN .

    $default  reduce using rule 23 (print_stmt)


State 54

   27 exp: T_LEFTPAREN assn_or_exp T_RIGHTPAREN .

    $default  reduce using rule 27 (exp)


State 55

   28 exp: T_LEFTCURL ls_exp T_RIGHTCURL .

    $default  reduce using rule 28 (exp)


State 56

    7 ls_exp: ls_exp T_NEWLINE assn_or_exp .

    $default  reduce using rule 7 (ls_exp)


State 57

    5 ls_exp: ls_exp T_SEMICOLON assn_or_exp .

    $default  reduce using rule 5 (ls_exp)


State 58

   29 exp: exp . T_LT exp
   30    | exp . T_GT exp
   31    | exp . T_LE exp
   32    | exp . T_GE exp
   33    | exp . T_NE exp
   33    | exp T_NE exp .
   34    | exp . T_EQ exp
   35    | exp . T_ANDD exp
   36    | exp . T_ORD exp
   37    | exp . T_PLUS exp
   38    | exp . T_MINUS exp
   39    | exp . T_COLON exp
   40    | exp . T_FSLASH exp
   41    | exp . T_STAR exp

    T_ANDD    shift, and go to state 38
    T_ORD     shift, and go to state 39
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    T_NE  error (nonassociative)
    T_GE  error (nonassociative)
    T_GT  error (nonassociative)
    T_LT  error (nonassociative)
    T_LE  error (nonassociative)
    T_EQ  error (nonassociative)
